--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@
 }
 
 h1 {
-    position: relative;
-    top: 3em;
+    margin: 50px 0px;
     font-family: 'Roboto Condensed', roboto, sans-serif;
     font-size: 2.5em;
 }
@@ -13,15 +12,13 @@ h1 {
     display: flex;
     align-content: space-around;
     flex-flow: row no-wrap;
-    position: relative;
-    left: 20%;
-    top: 15em;
+    justify-content: center;
 }
 
 .start-btns button {
     width: 20%;
     height: 100px;
-    margin: 0px 5%;
+    margin: 50px 5%;
 }
 
 .start-btns button:hover {
@@ -39,4 +36,27 @@ h1 {
 
 .btn-text {
     font-size: 2.5em;
+}
+
+.timer {
+    margin: 50px 0px;
+    font-size: 6em;
+}
+
+.timer p {
+    margin-top: 10px;
+    font-size: 25%;
+}
+
+/* box for quiz questions */
+.quiz-box p {
+    font-size: 2.5em;
+    margin-top: 1%;
+}
+
+.quiz-box ul {
+    margin: 2% 10%;
+    font-size: 2em;
+    line-height: 1.5;
+    list-style: decimal;
 }
